# ragdesk

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  render.yaml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml
ai/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
ai/app/: __init__.py  chat.py  chunking.py  config.py  embeddings.py  ingest.py  main.py  retrieval.py  telemetry.py
ai/tests/: test_chat.py  test_chunking.py  test_gemini.py  test_groq.py  test_health.py  test_ingest.py  test_retrieval.py  test_telemetry.py
api/: .golangci.yml  Dockerfile  go.mod  go.sum  main.go
api/internal/ai/: client.go
api/internal/auth/: auth.go  auth_test.go
api/internal/billing/: plans.go  provider.go  stripe.go  stripe_test.go
api/internal/config/: config.go
api/internal/ingest/: worker.go  worker_test.go
api/internal/server/: auth_handlers.go  billing_handlers.go  billing_test.go  chat_handlers.go  docs.go  document_handlers.go  health.go  health_test.go  http_test.go  metrics.go  middleware.go  openapi.yaml  ratelimit.go  ratelimit_test.go  responses.go  server.go  version.go  workspace_handlers.go
api/internal/store/: billing.go  billing_test.go  documents.go  documents_test.go  integration_test.go  store.go  (+4 more)
api/migrations/: 0001_init.sql  0002_documents.sql  0003_billing.sql  0004_billing_idempotency.sql  embed.go
docs/: architecture.md  deploy.md
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts  auth.ts
(+8 files in other folders)
