[project]
name = "ragdesk-ai"
version = "0.1.0"
description = "ragdesk AI service — ingestion, retrieval and provider-agnostic RAG chat"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
